# goit-web-hw_10

./: .gitignore  README.md  README_1.md
quotes_site/: manage.py  pyproject.toml
quotes_site/config/: settings.py  urls.py
quotes_site/data/: authors.json
quotes_site/importer/management/commands/: load_quotes.py
quotes_site/quotesapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotes_site/quotesapp/migrations/: 0001_initial.py  0002_tag_click_count.py
quotes_site/quotesapp/static/quotesapp/: style.css
quotes_site/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag_quotes.html
quotes_site/usersapp/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
quotes_site/usersapp/migrations/: 0001_initial.py
quotes_site/usersapp/templates/usersapp/: profile_edit.html
